--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
+<a [routerLink]="['/home']" routerLinkActive="routerLinkActive" >
+  Đi Tới Home
+</a>
+&nbsp;
+<a [routerLink]="['/agreements']" routerLinkActive="routerLinkActive" >
+  Đi Tới Agreements
+</a>
 <router-outlet></router-outlet>
