--- a/src/app/agreements/agreements.component.html
+++ b/src/app/agreements/agreements.component.html
@@ -13,7 +13,7 @@
 <body>
   <div class="body">
     <header>
-      <!-- nav -->
+      <!--nav -->
       <div class="navbar navbar-expand-xl fixed-top navbar-light bg-blue shadow-sm">
         <a href="#" class="navbar-brand d-flex align-items-center">
           <img src="/assets/img/logo_tps.svg" alt="TPS's Logo">
@@ -21,21 +21,21 @@
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item ">
-              <a class="nav-link" id="Home" href="home">
+              <a [routerLink]="['/home']" routerLinkActive="routerLinkActive" class="nav-link" id="Home" >
                 <img src="/assets/img/house-bar.png" alt="Bootstrap" width="24" height="24">
                 Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" id="Agreements" href="agreements">
+              <a [routerLink]="['/agreements']" routerLinkActive="routerLinkActive" class="nav-link" id="Agreements">
                 <img src="/assets/img/supermarket-bar.png" alt="Bootstrap" width="24" height="24">
                 Agreements</a>
             </li>
           </ul>
           <ul class="navbar-nav mr-auto1">
             <li class="nav-item1">
-              <a class="nav-link" id="goodafternoon" href="#" >
-                <b>Pandult</b> <p>Good Afternoon, User</p></a>
-              </li>
+             <a class="nav-link" id="goodafternoon" href="#">
+              <b>Pandult</b> <p>Good Afternoon, User</p></a>
+            </li>
           </ul>
           <img src="/assets/img/setting.png" alt="Bootstrap" width="18" height="18">
         </div>
