--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,33 +13,37 @@
 <body>
   <div class="body">
     <header>
-      <!--nav -->
-      <div class="navbar navbar-expand-xl fixed-top navbar-light bg-blue shadow-sm">
-        <a href="#" class="navbar-brand d-flex align-items-center">
-          <img src="assets/img/logo_tps.svg" alt="TPS's Logo">
-        </a>
-        <div class="collapse navbar-collapse" id="navbarText">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item ">
-              <a [routerLink]="['/home']" routerLinkActive="routerLinkActive" class="nav-link" id="Home" >
-                <img src="/assets/img/house-bar.png" alt="Bootstrap" width="24" height="24">
-                Home</a>
-            </li>
-            <li class="nav-item">
-              <a [routerLink]="['/agreements']" routerLinkActive="routerLinkActive" class="nav-link" id="Agreements">
-                <img src="/assets/img/supermarket-bar.png" alt="Bootstrap" width="24" height="24">
-                Agreements</a>
-            </li>
-          </ul>
-          <ul class="navbar-nav mr-auto1">
-            <li class="nav-item1">
-             <a class="nav-link" id="goodafternoon" href="#">
-              <b>Pandult</b> <p>Good Afternoon, User</p></a>
-            </li>
-          </ul>
-          <img src="/assets/img/setting.png" alt="Bootstrap" width="18" height="18">
-        </div>
-      </div>
+      <!--nav Chỗ này chắc phải tạo thêm 1 component để load Nav cho mobile-->
+           <div class="navbar navbar-expand-xl fixed-top navbar-light bg-blue shadow-sm">
+            <a [routerLink]="['/home']" routerLinkActive="routerLinkActive" class="navbar-brand d-flex align-items-center">
+              <img src="assets/img/logo_tps.svg" alt="TPS's Logo">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+            <div class="collapse navbar-collapse" id="navbarHeader">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item ">
+                  <a [routerLink]="['/home']" routerLinkActive="routerLinkActive" class="nav-link" id="Home" >
+                    <img src="assets/img/house-bar.png" alt="Bootstrap" width="24" height="24">
+                    Home</a>
+                </li>
+                <li class="nav-item">
+                  <a [routerLink]="['/agreements']" routerLinkActive="routerLinkActive" class="nav-link" id="Agreements">
+                    <img src="assets/img/supermarket-bar.png" alt="Bootstrap" width="24" height="24">
+                    Agreements</a>
+                </li>
+              </ul>
+              <ul class="navbar-nav mr-auto1">
+                <li class="nav-item1">
+                 <a class="nav-link" id="goodafternoon" >
+                  <b>Pandult</b> <p>Good Afternoon, User</p></a>
+                </li>
+              </ul>
+              <img src="assets/img/setting.png" alt="Bootstrap" width="18" height="18">
+            </div>
+          </div>
     </header>
     <!--Body-->
     <div class="container_home d-flex align-content-start flex-wrap">
@@ -54,7 +58,7 @@
             <!--Item 1-->
             <div class="item_hashtag d-flex flex-wrap">
               <div class="col-md-3">
-                <img src="/assets/img/tag.png" alt="Bootstrap" width="150px" height="150px">
+                <img src="assets/img/tag.png" alt="Bootstrap" width="150px" height="150px">
               </div>
               <div class="col-md-7">
                 <div class="decscrip">
@@ -72,7 +76,7 @@
             <!--Item 1-->
             <div class="item_hashtag d-flex align-content-start flex-wrap">
               <div class="col-md-3">
-                <img src="/assets/img/claim.png" alt="Bootstrap" width="150px" height="150px">
+                <img src="assets/img/claim.png" alt="Bootstrap" width="150px" height="150px">
               </div>
               <div class="col-md-7">
                 <div class="decscrip">
@@ -90,7 +94,7 @@
             <!--Item 1-->
             <div class="item_hashtag d-flex align-content-start flex-wrap">
               <div class="col-md-3">
-                <img src="/assets/img/bar-chart.png" alt="Bootstrap" width="150px" height="150px">
+                <img src="assets/img/bar-chart.png" alt="Bootstrap" width="150px" height="150px">
               </div>
               <div class="col-md-7">
                 <div class="decscrip">
