--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -50,8 +50,7 @@
       <div class="row d-flex flex-wrap">
         <div class="paragraph">
           <h2 id="tittle_para">Welcome to Celerity Enterprises!</h2>
-          <p class="para_para">We provide a unified platform for Agreements recociliation, communication, and repoting
-            between parties across the supplier and distribution network</p>
+          <p class="para_para">We provide a unified platform for agreement reconciliation, communication, and reporting between parties across the supplier and distribution network</p>
         </div>
         <div class="col-sm-8">
           <div class="row">
@@ -64,8 +63,7 @@
                 <div class="decscrip">
                   <h2 class="title_tag">Agreements</h2>
                   <p class="para_tag">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus libero omnis voluptatibus
-                    provident numquam similique ex, nam impedit unde quam?
+                    Review the status of special pricing agreements in place with your customers. View, modify, or publish agreements details to ensure contact rules are in place for accounting accuracy
                   </p>
                 </div>
               </div>
@@ -80,10 +78,9 @@
               </div>
               <div class="col-md-7">
                 <div class="decscrip">
-                  <h2 class="title_tag">Agreements</h2>
+                  <h2 class="title_tag">Claims</h2>
                   <p class="para_tag">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus libero omnis voluptatibus
-                    provident numquam similique ex, nam impedit unde quam?
+                    Ensure claims and submittals are ready to be sent your trading partners. Check the status of claim submissions, track workflow, and have complete transparency through the submission process.
                   </p>
                 </div>
               </div>
@@ -98,10 +95,11 @@
               </div>
               <div class="col-md-7">
                 <div class="decscrip">
-                  <h2 class="title_tag">Agreements</h2>
+                  <h2 class="title_tag">Reports</h2>
                   <p class="para_tag">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus libero omnis voluptatibus
-                    provident numquam similique ex, nam impedit unde quam?
+                    Get updateed agreement and claim data in real time, providing business intelligence for up-to-date understanding of your business. Create key performance reports, create scheduled reporting, and enjoy self-service analytics created for your unique business goals.
+
+
                   </p>
                 </div>
               </div>
