--- a/src/app/agreements/agreements.component.html
+++ b/src/app/agreements/agreements.component.html
@@ -6,10 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Agreements</title>
   <!-- Bootstrap core CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
-
-
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+  integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+  integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+  crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
   <div class="body">
@@ -47,22 +49,24 @@
       </div>
     </header>
       <div class="blankcategory" >
-        <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
-          <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a class="Mod_breadcrum" [routerLink]="['/home']" routerLinkActive="routerLinkActive" >Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Agreements</li>
-          </ol>
-        </nav>
+        <div class="bc-icons">
+          <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item"><a class="white-text" href="./index.html">Home</a></li>
+              <li class="breadcrumb-item"><i class="fa-solid fa-angle-right"></i> Agreements</li>
+            </ol>
+          </nav>
+        </div>
       </div>
     <!--Body-->
     <div class="container_home">
 
       <div class="paragraph">
         <h2 id="tittle_para">Agreements</h2>
-        <p class="para_para">We provide a unified platform for Agreements recociliation, communication.</p>
+        <p class="para_para">View, modify, and edit agreement details to prepare for claim submission</p>
       </div>
       <ag-grid-angular
-      style="width: 100%; height: 100vh; margin-left:30px;"
+      style="width: 100%; height: 80vh;padding-left: 30px;"
       class="ag-theme-alpine"
       [columnDefs]="columnDefs"
       [defaultColDef]="defaultColDef"
